--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>ASHURA Tattoo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="icon" href="/images/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
@@ -82,6 +82,6 @@
     © 2026 ASHURA Tattoo
 </footer>
 
-<script src="/js/script.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
